# cea

./: CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  pyproject.toml
.github/workflows/: basic_build.yml  publish_wheels.yml
cmake/: FindNumPy.cmake  FindPythonExtensions.cmake  UseCython.cmake
source/: CMakeLists.txt  detonation.f90  equilibrium.f90  fits.f90  input.f90  main.f90  mixture.f90  rocket.f90  shock.f90  thermo.f90
source/bind/: CMakeLists.txt
source/bind/c/: CMakeLists.txt  bindc.F90  cea.h
source/bind/c/samples/: rp1311_example2.c  rp1311_example6.c  rp1311_example7.c  rp1311_example8.c  rp1311_example9.c
source/bind/matlab/: ceam.pyx
source/bind/matlab/samples/: example1.m
test/main_interface/test_output/: example1.out  example2.out  example3.out
